<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.englishcat24.ui.activities.withdrawal.WithdrawalActivity">

    <include layout="@layout/toolbar" />

    <include layout="@layout/progress_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neo_sans_pro_bold"
                android:text="@string/full_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/neo_sans_pro_regular"
                android:hint="@string/full_name_example"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:nextFocusDown="@id/etEmail"
                android:singleLine="true"
                android:textColor="@color/colorDarkGray"
                android:textCursorDrawable="@drawable/background_cursor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neo_sans_pro_bold"
                android:text="@string/email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/neo_sans_pro_regular"
                android:hint="@string/email_example"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@id/etCardNumber"
                android:singleLine="true"
                android:textColor="@color/colorDarkGray"
                android:textCursorDrawable="@drawable/background_cursor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neo_sans_pro_bold"
                android:text="@string/card_number"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/neo_sans_pro_regular"
                android:hint="@string/card_number_example"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:nextFocusDown="@id/etAmount"
                android:singleLine="true"
                android:textColor="@color/colorDarkGray"
                android:textCursorDrawable="@drawable/background_cursor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/neo_sans_pro_bold"
                    android:text="@string/amount_your_balance"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/neo_sans_pro_bold"
                    android:text="123"
                    android:textColor="@color/colorBlue"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/neo_sans_pro_bold"
                    android:text=")"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/neo_sans_pro_regular"
                android:hint="@string/amount_example"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorDarkGray"
                android:textCursorDrawable="@drawable/background_cursor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSendData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:fontFamily="@font/neo_sans_pro_bold"
                android:padding="16dp"
                android:text="@string/send_data"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvToMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neo_sans_pro_bold"
                android:text="@string/on_the_menu"
                android:textColor="@color/colorLightGreen"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
