<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.activities.signIn.SignInActivity">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/rlContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neo_sans_pro_bold"
                android:text="@string/sign_in"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neo_sans_pro_bold"
                android:text="@string/email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/neo_sans_pro_regular"
                android:hint="@string/email_example"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/etPassword"
                android:textColor="@color/colorDarkGray"
                android:textCursorDrawable="@drawable/background_cursor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neo_sans_pro_bold"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/neo_sans_pro_regular"
                android:hint="@string/password_example"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/colorDarkGray"
                android:textCursorDrawable="@drawable/background_cursor" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_button"
                android:fontFamily="@font/neo_sans_pro_bold"
                android:padding="16dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/neo_sans_pro_regular"
                android:text="@string/login_via_social_network"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivGoogle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_google" />

                <ImageView
                    android:id="@+id/ivFacebook"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_fb" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/neo_sans_pro_bold"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>
