<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlCreateAccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ivCreateAccountCat"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/neo_sans_pro_bold"
            android:text="@string/it_is_time_to_create_a_profile"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/neo_sans_pro_regular"
            android:text="@string/create_account_describe"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivCreateAccountCat"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_above="@id/llCreateAccountBottomButtons"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:src="@drawable/create_account_cat" />

    <LinearLayout
        android:id="@+id/llCreateAccountBottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:fontFamily="@font/neo_sans_pro_bold"
            android:padding="16dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCreateAccountLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/neo_sans_pro_bold"
            android:text="@string/later"
            android:textColor="@color/colorLightGreen"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>