<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlFinishPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomButtons"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neo_sans_pro_bold"
            android:textColor="@color/colorRed"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/neo_sans_pro_regular"
            android:text="@string/your_result"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvResultScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/neo_sans_pro_bold"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/ivResultCat"
            android:layout_width="wrap_content"
            android:layout_height="250dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnPlayAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:fontFamily="@font/neo_sans_pro_bold"
            android:padding="16dp"
            android:text="@string/play_again"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_blue_button"
            android:fontFamily="@font/neo_sans_pro_bold"
            android:padding="16dp"
            android:text="@string/share_result"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvFromFinishToMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/neo_sans_pro_bold"
            android:text="@string/on_the_menu"
            android:textColor="@color/colorLightGreen"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>